--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "5.3.0-alpha1",
+    "firebase": "^10.4.0",
     "nouislider-react": "^3.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -17,10 +18,11 @@
     "react-image-lightbox": "^5.1.4",
     "react-masonry-component": "^6.3.0",
     "react-modern-drawer": "^1.2.0",
+    "react-pdf": "^7.3.3",
     "react-rangeslider": "^2.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "react-select": "^5.7.2",
+    "react-select": "^5.7.5",
     "reactstrap": "^9.1.6",
     "sass": "^1.59.3",
     "swiper": "^9.1.1",
