--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "bootstrap": "5.3.0-alpha1",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "firebase": "^10.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "nouislider-react": "^3.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -20,12 +25,14 @@
     "react-modern-drawer": "^1.2.0",
     "react-pdf": "^7.3.3",
     "react-rangeslider": "^2.2.0",
-    "react-router-dom": "^6.9.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.5",
     "reactstrap": "^9.1.6",
     "sass": "^1.59.3",
+    "stream-browserify": "^3.0.0",
     "swiper": "^9.1.1",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
