--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.5",
+    "react-spinners": "^0.13.8",
     "reactstrap": "^9.1.6",
     "sass": "^1.59.3",
     "stream-browserify": "^3.0.0",
