--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "5.3.0-alpha1",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
