--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-masonry-component": "^6.3.0",
     "react-modern-drawer": "^1.2.0",
     "react-pdf": "^7.3.3",
+    "react-quill": "^2.0.0",
     "react-rangeslider": "^2.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
