--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.5.1",
     "bootstrap": "5.3.0-alpha1",
     "buffer": "^6.0.3",
@@ -32,10 +33,13 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.5",
     "react-spinners": "^0.13.8",
+    "react-tinymce": "^0.7.0",
     "reactstrap": "^9.1.6",
     "sass": "^1.59.3",
     "stream-browserify": "^3.0.0",
     "swiper": "^9.1.1",
+    "tinymce": "^6.7.0",
+    "tinymce-react": "^1.3.2",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
@@ -62,5 +66,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "babel-loader": "^9.1.3"
   }
 }
