--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-select": "^5.7.5",
     "react-spinners": "^0.13.8",
     "react-tinymce": "^0.7.0",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.6",
     "sass": "^1.59.3",
     "stream-browserify": "^3.0.0",
