--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-masonry-component": "^6.3.0",
     "react-modern-drawer": "^1.2.0",
+    "react-new-window": "^1.0.1",
     "react-pdf": "^7.3.3",
     "react-quill": "^2.0.0",
     "react-rangeslider": "^2.2.0",
