--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "fullcalendar": "^6.1.9",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
     "jwt-decode": "^3.1.2",
     "nouislider-react": "^3.4.1",
     "react": "^18.2.0",
