--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "bootstrap": "5.3.0-alpha1",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "fullcalendar": "^6.1.9",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "nouislider-react": "^3.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
