--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "bootstrap": "5.3.0-alpha1",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
+    "file-saver": "^2.0.5",
     "firebase": "^10.4.0",
     "fullcalendar": "^6.1.9",
     "html2canvas": "^1.4.1",
