--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nouislider-react": "^3.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-calendar": "^4.6.1",
     "react-countdown": "^2.3.5",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
