--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.5",
     "react-spinners": "^0.13.8",
+    "react-step-progress": "^1.0.3",
+    "react-step-progress-bar": "^1.0.3",
     "react-tinymce": "^0.7.0",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.6",
@@ -92,6 +94,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3"
